--- a/MoneySplitter.Win10/Views/LoginView.xaml
+++ b/MoneySplitter.Win10/Views/LoginView.xaml
@@ -15,13 +15,13 @@
                 <TextBlock Text="Email"
                            />
                 <TextBox PlaceholderText="Enter email"
-                         DataContext="{x:Bind ViewModel.Login.Email, Mode=OneWay}"/>
+                         Text="{x:Bind ViewModel.Login.Email, Mode=OneWay}"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal"
                         Margin="5">
                 <TextBlock Text="Pasword"/>
                 <PasswordBox PlaceholderText="Enter Password"
-                             DataContext="{x:Bind ViewModel.Login.Password, Mode=OneWay}"/>
+                             TextReadingOrder="{x:Bind ViewModel.Login.Password, Mode=OneWay}"/>
                 
             </StackPanel>
             <Button Content="Login"
