--- a/MoneySplitter.Win10/Views/ShellView.xaml
+++ b/MoneySplitter.Win10/Views/ShellView.xaml
@@ -8,6 +8,6 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="{x:Bind ViewModel.User.Surname, Mode=OneWay}"/>
+        <TextBlock Text="{x:Bind ViewModel.User.Email, Mode=OneWay}"/>
     </Grid>
 </Page>
