--- a/MoneySplitter.Win10/Views/LoginView.xaml
+++ b/MoneySplitter.Win10/Views/LoginView.xaml
@@ -27,6 +27,8 @@
             </StackPanel>
             <Button Content="Login"
                     Click="OnLoginClick"/>
+            <HyperlinkButton Content="Registr"
+                             Click="OnRegistredClick"/>
         </StackPanel>
     </Grid>
 </Page>
