--- a/MoneySplitter.Win10/Views/RegistrView.xaml
+++ b/MoneySplitter.Win10/Views/RegistrView.xaml
@@ -14,7 +14,7 @@
 
 
             <TextBox PlaceholderText="Enter email"
-                     Text="{x:Bind ViewModel.Email, Mode=TwoWay}"
+                     Text="{x:Bind ViewModel.RegisterModel.Email, Mode=TwoWay}"
                      Header="Email"/>
 
             <PasswordBox PlaceholderText="Enter Password"
