--- a/MoneySplitter.Win10/Views/RegistrView.xaml
+++ b/MoneySplitter.Win10/Views/RegistrView.xaml
@@ -18,7 +18,7 @@
                      Header="Email"/>
 
             <PasswordBox PlaceholderText="Enter Password"
-                         Password="{x:Bind ViewModel.Password, Mode=TwoWay}"
+                         Password="{x:Bind ViewModel.RegisterModel.Password, Mode=TwoWay}"
                          Header="Password"/>
             
             <PasswordBox PlaceholderText="Confirm password"
@@ -26,19 +26,19 @@
                          Header="Confirm password"/>
 
             <TextBox PlaceholderText="Enter name"
-                     Text="{x:Bind ViewModel.Name, Mode=TwoWay}"
+                     Text="{x:Bind ViewModel.RegisterModel.Name, Mode=TwoWay}"
                      Header="Name"/>
 
             <TextBox PlaceholderText="Enter surname"
-                     Text="{x:Bind ViewModel.Surname, Mode=TwoWay}"
+                     Text="{x:Bind ViewModel.RegisterModel.Surname, Mode=TwoWay}"
                      Header="Surname"/>
 
             <TextBox PlaceholderText="Enter credit card number"
-                     Text="{x:Bind ViewModel.CreditCardNumber, Mode=TwoWay}"
+                     Text="{x:Bind ViewModel.RegisterModel.CreditCardNumber, Mode=TwoWay}"
                      Header="Number credit card"/>
 
             <TextBox PlaceholderText="Enter phone number"
-                     Text="{x:Bind ViewModel.PhoneNumber, Mode=TwoWay}"
+                     Text="{x:Bind ViewModel.RegisterModel.PhoneNumber, Mode=TwoWay}"
                      Header="Phone number"/>
 
 
