--- a/MoneySplitter.Win10/Views/ShellView.xaml
+++ b/MoneySplitter.Win10/Views/ShellView.xaml
@@ -9,15 +9,12 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <TextBlock Text="{x:Bind ViewModel.UserModel.Email, Mode=OneWay}"/>
-        <SplitView>
-            <SplitView.Pane>
-                <StackPanel>
-                    <Button Content="My info"/>
-                    <Button Content="Button 2"/>
-                </StackPanel>
-            </SplitView.Pane>
-            <Frame x:Name="ShellFrame"
-                   Loaded="ShellFrame_Loaded"/>
-        </SplitView>
+        <NavigationView>
+            <StackPanel>
+                <Button Content="My info"/>
+                <Button Content="Button 2"/>
+            </StackPanel>
+   
+        </NavigationView>
     </Grid>
 </Page>
