--- a/MoneySplitter.Win10/Views/ShellView.xaml
+++ b/MoneySplitter.Win10/Views/ShellView.xaml
@@ -43,7 +43,7 @@
 
 
         <Frame x:Name="ContentFrame" Margin="24"
-               Loaded="ShellFrame_Loaded">
+               Loaded="OnShellFrameLoaded">
             
             <Frame.ContentTransitions>
                 <TransitionCollection>
