--- a/MoneySplitter.Win10/Views/LoginView.xaml
+++ b/MoneySplitter.Win10/Views/LoginView.xaml
@@ -22,7 +22,7 @@
             <Button Content="Login"
                     Click="OnLoginClick"
                     Margin="5"/>
-            <HyperlinkButton Content="Registr"
+            <HyperlinkButton Content="Register"
                              Click="OnRegistredClick"/>
         </StackPanel>
     </Grid>
