--- a/MoneySplitter.Win10/Views/RegisterView.xaml
+++ b/MoneySplitter.Win10/Views/RegisterView.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="MoneySplitter.Win10.Views.RegistrView"
+    x:Class="MoneySplitter.Win10.Views.RegisterView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MoneySplitter.Win10.Views"
