--- a/MoneySplitter.Win10/Views/FoundUsersView.xaml
+++ b/MoneySplitter.Win10/Views/FoundUsersView.xaml
@@ -14,7 +14,7 @@
             </Grid.RowDefinitions>
         <TextBox PlaceholderText="Enter search query" 
                  TextChanged="OnTextBoxTextChanged"/>
-        <ListView x:Name="ListFriends"
+        <ListView x:Name="ListUsers"
                   Grid.Row="1"
                   ItemsSource="{x:Bind ViewModel.SearchEngine.Results, Mode=OneWay}"
                   IsItemClickEnabled="True">
