--- a/MoneySplitter.Win10/Views/ShellView.xaml
+++ b/MoneySplitter.Win10/Views/ShellView.xaml
@@ -5,56 +5,58 @@
     xmlns:local="using:MoneySplitter.Win10.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="using:MoneySplitter.Win10.ViewModels"
     mc:Ignorable="d">
-
-    <NavigationView x:Name="NavView" 
-                    ItemInvoked="OnMenuItemClick">
-
-        <NavigationView.MenuItems>
-            <NavigationViewItem x:Uid="HomeNavItem" Content="Home" Tag="home">
-                <NavigationViewItem.Icon>
-                    <FontIcon Glyph="&#xE10F;"/>
-                </NavigationViewItem.Icon>
-            </NavigationViewItem>
-            <NavigationViewItemSeparator/>
-            <NavigationViewItem x:Uid="PeopleNavItem" Icon="People" Content="Friends" Tag="friends"/>
-            <NavigationViewItem x:Uid="Page2NavItem" Icon="Page2" Content="Transactions" Tag="transactions"/>
-            <NavigationViewItem x:Uid="ZoomhNavItem" Icon="Zoom" Content="Search" Tag="search"/>
-
-        </NavigationView.MenuItems>
-
-        <NavigationView.AutoSuggestBox>
-            <AutoSuggestBox x:Name="ASB" QueryIcon="Find"
-                            Text="{x:Bind ViewModel.SearchQuery, Mode=TwoWay}"
-                           IsEnabled="False"/>
-        </NavigationView.AutoSuggestBox>
-
-        <NavigationView.HeaderTemplate>
-            <DataTemplate>
-                <Grid Margin="24,10,0,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Style="{StaticResource TitleTextBlockStyle}"
-                           FontSize="28"
-                           VerticalAlignment="Center"
-                           Text="Welcome"/>
-                </Grid>
-            </DataTemplate>
-        </NavigationView.HeaderTemplate>
-
-
-        <Frame x:Name="ContentFrame" Margin="24"
-               Loaded="OnShellFrameLoaded"
-               DataContext="{x:Null}">
+    <Grid>
+        <NavigationView x:Name="NavView" 
+                        ItemInvoked="OnMenuItemClick">
             
-            <Frame.ContentTransitions>
-                <TransitionCollection>
-                    <NavigationThemeTransition/>
-                </TransitionCollection>
-            </Frame.ContentTransitions>
-        </Frame>
+            <NavigationView.MenuItems>
+                <NavigationViewItem x:Uid="HomeNavItem" Content="Home" Tag="home">
+                    <NavigationViewItem.Icon>
+                        <FontIcon Glyph="&#xE10F;"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
+                <NavigationViewItemSeparator/>
+                <NavigationViewItem x:Uid="PeopleNavItem" Icon="People" Content="Friends" Tag="friends"/>
+                <NavigationViewItem x:Uid="Page2NavItem" Icon="Page2" Content="Transactions" Tag="transactions"/>
+                <NavigationViewItem x:Uid="ZoomhNavItem" Icon="Zoom" Content="Search" Tag="search"/>
 
-    </NavigationView>
+            </NavigationView.MenuItems>
+
+            <!--<NavigationView.AutoSuggestBox>
+                <AutoSuggestBox x:Name="ASB" QueryIcon="Find"
+                                Text="{x:Bind ViewModel.SearchQuery, Mode=TwoWay}"
+                               IsEnabled="False"/>
+            </NavigationView.AutoSuggestBox>-->
+            <NavigationView.HeaderTemplate>
+                <DataTemplate x:DataType="viewmodels:ShellViewModel">
+                    <Grid Margin="24,10,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Style="{StaticResource TitleTextBlockStyle}"
+                               FontSize="28"
+                               Text="{x:Bind TitleFrameText, Mode=OneWay}"/>
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </NavigationView.HeaderTemplate>
+
+
+            <Frame x:Name="ContentFrame" Margin="24"
+                   Loaded="OnShellFrameLoaded"
+                   DataContext="{x:Null}">
+            
+                <Frame.ContentTransitions>
+                    <TransitionCollection>
+                        <NavigationThemeTransition/>
+                    </TransitionCollection>
+                </Frame.ContentTransitions>
+            </Frame>
+
+        </NavigationView>
+    </Grid>
 </Page>
