--- a/MoneySplitter.Win10/Views/ShellView.xaml
+++ b/MoneySplitter.Win10/Views/ShellView.xaml
@@ -1,29 +1,26 @@
-﻿<Page
-    x:Class="MoneySplitter.Win10.Views.ShellView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewmodels="using:MoneySplitter.Win10.ViewModels"
-    mc:Ignorable="d">
+﻿<Page x:Class="MoneySplitter.Win10.Views.ShellView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:MoneySplitter.Win10.Views"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:viewmodels="using:MoneySplitter.Win10.ViewModels"
+      mc:Ignorable="d">
+    <Page.Resources>
+        <ResourceDictionary>
+            <DataTemplate x:Key="MenuItemTemplate" x:DataType="viewmodels:MenuItemModel"  >
+                <StackPanel Orientation="Horizontal">
+                    <FontIcon Glyph="&#xE10F;" />
+                    <TextBlock Text="{x:Bind Text, Mode=OneWay}" Margin="9,0,0,0"/>
+                </StackPanel>
+            </DataTemplate>
+        </ResourceDictionary>
+    </Page.Resources>
     <Grid>
-        <NavigationView x:Name="NavView" 
+        <NavigationView x:Name="NavView"
+                        MenuItemsSource="{x:Bind ViewModel.MenuItems, Mode=OneWay}"
+                        MenuItemTemplate="{StaticResource MenuItemTemplate}"
                         ItemInvoked="OnMenuItemClick">
-            
-            <NavigationView.MenuItems>
-                <NavigationViewItem x:Uid="HomeNavItem" Content="Home" Tag="home">
-                    <NavigationViewItem.Icon>
-                        <FontIcon Glyph="&#xE10F;"/>
-                    </NavigationViewItem.Icon>
-                </NavigationViewItem>
-                <NavigationViewItemSeparator/>
-                <NavigationViewItem x:Uid="PeopleNavItem" Icon="People" Content="Friends" Tag="friends"/>
-                <NavigationViewItem x:Uid="Page2NavItem" Icon="Page2" Content="Transactions" Tag="transactions"/>
-                <NavigationViewItem x:Uid="ZoomhNavItem" Icon="Zoom" Content="Search" Tag="search"/>
-
-            </NavigationView.MenuItems>
-
             <!--<NavigationView.AutoSuggestBox>
                 <AutoSuggestBox x:Name="ASB" QueryIcon="Find"
                                 Text="{x:Bind ViewModel.SearchQuery, Mode=TwoWay}"
@@ -49,7 +46,7 @@
             <Frame x:Name="ContentFrame" Margin="24"
                    Loaded="OnShellFrameLoaded"
                    DataContext="{x:Null}">
-            
+
                 <Frame.ContentTransitions>
                     <TransitionCollection>
                         <NavigationThemeTransition/>
