--- a/MoneySplitter.Win10/Views/ShellView.xaml
+++ b/MoneySplitter.Win10/Views/ShellView.xaml
@@ -10,8 +10,8 @@
         <ResourceDictionary>
             <DataTemplate x:Key="MenuItemTemplate" x:DataType="viewmodels:MenuItemModel"  >
                 <StackPanel Orientation="Horizontal">
-                    <FontIcon Glyph="&#xE10F;" />
-                    <TextBlock Text="{x:Bind Text, Mode=OneWay}" Margin="9,0,0,0"/>
+                    <FontIcon Glyph="{x:Bind Glyph, Mode=OneWay}" />
+                    <TextBlock Text="{x:Bind Text, Mode=OneWay}" Margin="12,0,0,0"/>
                 </StackPanel>
             </DataTemplate>
         </ResourceDictionary>
