--- a/MoneySplitter.Win10/Views/FoundUsersView.xaml
+++ b/MoneySplitter.Win10/Views/FoundUsersView.xaml
@@ -8,15 +8,38 @@
     xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
     xmlns:models="using:MoneySplitter.Models"
     mc:Ignorable="d">
+    
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
                 <RowDefinition Height="32"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="AdaptiveVisualStateGroup">
+                <VisualState x:Name="Normal">
+                    <VisualState.Setters>
+                        <Setter Target="UsersList.Visibility" Value="Collapsed"></Setter>
+                        <Setter Target="UsersGridView.Visibility" Value="Visible"></Setter>
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="700"></AdaptiveTrigger>
+                    </VisualState.StateTriggers>
+                </VisualState>
+                <VisualState x:Name="Mobile">
+                    <VisualState.Setters>
+                        <Setter Target="UsersList.Visibility" Value="Visible"></Setter>
+                        <Setter Target="UsersGridView.Visibility" Value="Collapsed"></Setter>
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0"></AdaptiveTrigger>
+                    </VisualState.StateTriggers>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
         <TextBox PlaceholderText="Enter search query" 
                  TextChanged="OnTextBoxTextChanged"/>
-        <!--<ListView x:Name="ListUsers"
+        <ListView x:Name="UsersList"
                   Grid.Row="1"
                   ItemsSource="{x:Bind ViewModel.SearchEngine.Results, Mode=OneWay}"
                   IsItemClickEnabled="True">
@@ -29,10 +52,11 @@
                                                       OnAddOrRemoveItemClick="OnMobileUserControlAddUserItemClick"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
-        </ListView>-->
-        <GridView x:Name="GridViewCities"
+        </ListView>
+        <GridView x:Name="UsersGridView"
                   Grid.Row="1"
-                  ItemsSource="{x:Bind ViewModel.SearchEngine.Results, Mode=OneWay}">
+                  ItemsSource="{x:Bind ViewModel.SearchEngine.Results, Mode=OneWay}"
+                  Visibility="Visible">
             <GridView.ItemTemplate>
                 <DataTemplate x:DataType="models:UserModel">
                     <customControls:DesktopUserContol ViewModel="{x:Bind Mode=OneWay}"
