--- a/MoneySplitter.Win10/CustomControls/DesktopUserContol.xaml
+++ b/MoneySplitter.Win10/CustomControls/DesktopUserContol.xaml
@@ -23,8 +23,8 @@
                 </TextBlock>
             <TextBlock Text="{x:Bind ViewModel.Email, Mode=OneWay}"/>
             <Button Click="OnAddOrRemoveButtonClick" Content="{x:Bind ButtonContent, Mode=OneWay}" 
-                    Style="{ThemeResource EllipsisButtonRevealStyle}"
-                    MaxWidth="40"/>
+                    Style="{ThemeResource TextBlockButtonStyle}"
+                    HorizontalAlignment="Center"/>
             
         </StackPanel>
     </Grid>
