--- a/MoneySplitter.Win10/Views/SearchUsersView.xaml
+++ b/MoneySplitter.Win10/Views/SearchUsersView.xaml
@@ -65,6 +65,10 @@
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
-
+        <ProgressRing Width="68"
+                      Height="68"
+                      Foreground="#2C404B"
+                      Grid.Row="1"
+                      IsActive="{x:Bind ViewModel.SearchEngine.IsSearchInProgress, Mode=OneWay}"/>
     </Grid>
 </Page>
